--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet"
 			href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+		<title>Thomas Freeman</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
