chore: format code and fix locomotive scroll type error
- Run prettier to format all files
- Remove unsupported 'repeat' property from LocomotiveScroll config
- Build passes successfully

--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.webp" />
 		<meta name="viewport" content="width=device-width" />
-		<meta property="og:title" content="Tom's Portfolio Site">
+		<meta property="og:title" content="Tom's Portfolio Site" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image"
-			content="https://www.google.com/url?sa=i&url=https%3A%2F%2Femojipedia.org%2Fwaving-hand&psig=AOvVaw3SKdA_iTMP_Vt_8cPHHlTh&ust=1693576443424000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCPC0uoSGh4EDFQAAAAAdAAAAABAE">
-		<meta property="og:url" content="https://thomas-freeman.vercel.app/">
-		<meta name="twitter:card" content="summary_large_image">
-		<link rel="stylesheet"
-			href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+		<meta
+			property="og:image"
+			content="https://www.google.com/url?sa=i&url=https%3A%2F%2Femojipedia.org%2Fwaving-hand&psig=AOvVaw3SKdA_iTMP_Vt_8cPHHlTh&ust=1693576443424000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCPC0uoSGh4EDFQAAAAAdAAAAABAE"
+		/>
+		<meta property="og:url" content="https://thomas-freeman.vercel.app/" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+		/>
 		<title>Thomas Freeman</title>
 		%sveltekit.head%
 	</head>
